[tool.poetry]
name = "testpackage"
version = "0.0.0"
description = "just a test"
authors = ["samuli"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.semantic_release] 
version_variable = "pyproject.toml:version" 
version_toml = [ 
"pyproject.toml:tool.poetry.version", 
] 
